# foxtime

./: .gitignore  README.md  pyproject.toml
src/foxtime/: __init__.py  reader.py
src/foxtime/cli/: __init__.py  banner.py  entrypoint.py  rich_table.py
src/foxtime/models/: __init__.py  busy_status.py  calendar_event.py  sensitivity.py
src/foxtime/utils/: __init__.py  custom_logger.py  format_converter.py  git_version.py  web_color.py
